Updated styles for dark mode a little. Set dark mode as the default. Fixed issue with font awesome image loading in as a really big image at first load

--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -123,7 +123,7 @@ body.dark-mode .toggleThemeButton:hover {
         height: 3px;
         border-radius: 3px;
         transition: all 0.3s ease;
-        background-color: black;
+        background-color: var(--color-background-hamburger-line);
     }
 
     .pageHeader {
@@ -178,12 +178,12 @@ body.dark-mode .toggleThemeButton:hover {
         border: 1px solid transparent;
         border-radius: 4px;
         transition: color 0.3s ease, border-color 0.3s ease;
-        color: var(--color-text-subtle);
+        color: var(--color-text-mobile-nav);
     }
 
     .mobileNavPanel a:hover,
     .mobileNavPanel a:active {
-        border-color: var(--color-text-subtle);
+        border-color: var(--color-border-mobile-nav);
     }
 
 }
